--- a/vocbench3/it.uniroma2.art.semanticturkey.cfg
+++ b/vocbench3/it.uniroma2.art.semanticturkey.cfg
@@ -1,4 +1,4 @@
-data.dir=../data/SemanticTurkeyData
+data.dir=../semanticturkey-8.0/data/SemanticTurkeyData
 ontologiesMirrorLocation=default
 adminStatus=false
 version=5.0
